# MicroCosm

./: CMakeLists.txt  READ.md  imgui.ini
include/: Brain.hpp  Config.hpp  Entities.hpp  NEATBrain.hpp  NEATGenome.hpp  NeuralNetwork.hpp  RNNBrain.hpp  UISystem.hpp  World.hpp
include/Core/: NeuralNetwork.hpp
src/: Entities.cpp  NeuralNetwork.cpp  RNNBrain.cpp  UISystem.cpp  World.cpp  main.cpp
